trunk/Archive2/6e/fe29b4346388ca/output
main.cpp:7:5: error: stray '\303' in program
     std :: cout . imprégner ( std :: locale ( "en_US.utf8" ) ) ; 
     ^
main.cpp:7:5: error: stray '\251' in program
main.cpp:9:55: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  - 1.23   <<  ' \n ' 
                                                       ^
main.cpp:10:85: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  std:: hex  <<  std:: showbase  <<  42  <<  ' \n ' 
                                                                                     ^
main.cpp:14:55: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  - 1.23   <<  ' \n ' 
                                                       ^
main.cpp:15:50: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  42  <<  ' \n ' 
                                                  ^
main.cpp:19:55: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  - 1.23   <<  ' \n ' 
                                                       ^
main.cpp:20:50: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  42  <<  ' \n ' 
                                                  ^
main.cpp:21:78: warning: multi-character character constant [-Wmultichar]
               <<  std:: setw ( 12 )  <<  std:: put_money ( 123 , true )  <<  ' \n ' ; 
                                                                              ^
main.cpp: In function 'int principale()':
main.cpp:7:19: error: 'std::ostream' has no member named 'impr'
     std :: cout . imprégner ( std :: locale ( "en_US.utf8" ) ) ; 
                   ^
main.cpp:22:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
